update java 11 config