@@ -81,6 +81,12 @@
             <releases><enabled>true</enabled></releases>
             <snapshots><enabled>false</enabled></snapshots>
         </repository>
+        <!-- Repo jvnet is for java.xml.bind (org.glassfish.jaxb:jaxb-runtime:2.4.0-b180608.0325) that removed in JDK 11 by JEP-320 -->
+        <repository>
+            <id>jvnet-nexus-staging</id>
+            <url>http://maven.java.net/content/repositories/staging/</url>
+            <layout>default</layout>
+        </repository>
         <!-- @formatter:on -->
     </repositories>
 
@@ -151,6 +157,9 @@
     </pluginRepositories>
 
     <properties>
+        <asm.version>6.2</asm.version>
+        <javassist.version>3.23.1-GA</javassist.version>
+
         <checkstyle.consoleOutput>true</checkstyle.consoleOutput>
         <checkstyle.failOnViolation>false</checkstyle.failOnViolation>
         <checkstyle.failsOnError>false</checkstyle.failsOnError>
@@ -381,7 +390,12 @@
                 </plugin>
                 <plugin><artifactId>maven-source-plugin</artifactId><version>${maven-source-plugin.version}</version></plugin>
                 <plugin><artifactId>maven-resources-plugin</artifactId><version>${maven-resources-plugin.version}</version></plugin>
-                <plugin><artifactId>maven-surefire-plugin</artifactId><version>${maven-surefire-plugin.version}</version></plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId><version>${maven-surefire-plugin.version}</version>
+                    <dependencies>
+                        <dependency><groupId>org.ow2.asm</groupId><artifactId>asm</artifactId><version>${asm.version}</version></dependency>
+                    </dependencies>
+                </plugin>
                 <plugin><artifactId>maven-toolchains-plugin</artifactId><version>${maven-toolchains-plugin.version}</version></plugin>
 
                 <plugin><artifactId>maven-project-info-reports-plugin</artifactId><version>${maven-project-info-reports-plugin.version}</version></plugin>
@@ -1995,41 +2009,14 @@
             </reporting>
         </profile>
         <profile>
-            <id>default-java11-jvmArguments-addModules</id>
-            <activation><jdk>11</jdk><property><name>!jvmArguments.addModules</name></property></activation>
-            <properties><jvmArguments.addModules>java.xml.bind,java.xml.ws,java.xml.ws.annotation</jvmArguments.addModules></properties>
-        </profile>
-        <profile>
-            <id>java11-without-groovy</id>
-            <activation><jdk>11</jdk><file><missing>${basedir}/src/main/groovy</missing></file><activeByDefault>false</activeByDefault></activation>
-            <properties><java.version>11</java.version></properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration><compilerVersion>${java.version}</compilerVersion><compilerArgs><arg>--add-modules</arg><arg>${jvmArguments.addModules}</arg></compilerArgs></configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>java11-with-groovy</id>
-            <activation><jdk>11</jdk><file><exists>${basedir}/src/main/groovy</exists></file><activeByDefault>false</activeByDefault></activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration><compilerArgs><arg>-J--add-modules</arg><arg>-J${jvmArguments.addModules}</arg></compilerArgs></configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>java11</id>
             <activation><jdk>11</jdk><activeByDefault>false</activeByDefault></activation>
             <properties>
                 <!-- Runtime modules for java11 -->
+                <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+                <javax.transaction-api.version>1.3</javax.transaction-api.version>
                 <jaxb-api.version>2.3.0</jaxb-api.version>
+                <jaxws-api.version>2.3.0</jaxws-api.version>
                 <java.version>11</java.version>
                 <maven.compiler.release>11</maven.compiler.release>
                 <maven.compiler.source>11</maven.compiler.source>
@@ -2071,15 +2058,25 @@
                             <fail>true</fail>
                         </configuration>
                     </plugin>
-                    <plugin><artifactId>maven-failsafe-plugin</artifactId><configuration><argLine>--add-modules ${jvmArguments.addModules} ${argLine}</argLine></configuration></plugin>
-                    <plugin><artifactId>maven-surefire-plugin</artifactId><configuration><argLine>--add-modules ${jvmArguments.addModules} ${argLine}</argLine></configuration></plugin>
+                    <plugin><artifactId>maven-failsafe-plugin</artifactId><configuration><argLine>--illegal-access=permit ${argLine}</argLine></configuration></plugin>
+                    <plugin><artifactId>maven-surefire-plugin</artifactId><configuration><argLine>--illegal-access=permit ${argLine}</argLine></configuration></plugin>
                 </plugins>
             </build>
             <dependencyManagement>
                 <dependencies>
+                    <!-- see: https://dzone.com/articles/apis-to-be-removed-from-java-11 -->
+                    <!-- java.activation -->
                     <dependency><groupId>javax.activation</groupId><artifactId>activation</artifactId><version>${java11-javax.activation.version}</version></dependency>
+                    <!-- java.transaction -->
+                    <!--<dependency><groupId>javax.transaction</groupId><artifactId>javax.transaction-api</artifactId><version>${javax.transaction-api.version}</version></dependency>-->
                     <!-- Hibernate java.lang.NoClassDefFoundError: javax/xml/bind/JAXBException -->
+                    <!-- java.xml.bind -->
                     <dependency><groupId>javax.xml.bind</groupId><artifactId>jaxb-api</artifactId><version>${jaxb-api.version}</version></dependency>
+                    <!--<dependency><groupId>com.sun.xml.bind</groupId><artifactId>jaxb-core</artifactId><version>${jaxb-api.version}</version></dependency>-->
+                    <!--<dependency><groupId>com.sun.xml.bind</groupId><artifactId>jaxb-impl</artifactId><version>${jaxb-api.version}</version></dependency>-->
+                    <!-- java.xml.ws -->
+                    <dependency><groupId>javax.annotation</groupId><artifactId>javax.annotation-api</artifactId><version>${javax.annotation-api.version}</version></dependency>
+                    <dependency><groupId>javax.xml.ws</groupId><artifactId>jaxws-api</artifactId><version>${jaxws-api.version}</version></dependency>
                 </dependencies>
             </dependencyManagement>
             <reporting>
